commit 05/09/19 zozor & toggle exo

--- a/projets-web/Cours_OCR_CV_en_ligne/ocr_cv.css
+++ b/projets-web/Cours_OCR_CV_en_ligne/ocr_cv.css
@@ -9,13 +9,22 @@ body{
 }
 
 h1{
+    
     color: rgb(18, 15, 199);                          /*chgt couleur*/
     text-shadow: 10px 5px 2px rgb(110, 221, 255);     /*ombre texte*/
     text-align: center;
-    border: 1px groove black;                         /*bordure*/
+    border: 2px groove black;                         /*bordure*/
     margin: 2em;
+    margin-left: 25%;
+    margin-right: 25%;
     padding: 1.3em;
+    
+    /* Animation */
+  -webkit-animation: ombre ease-in infinite alternate 500ms;
+  -moz-animation: ombre ease-in infinite alternate 500ms;
+  animation: ombre ease-in infinite alternate 500ms;
 }
+
 
 .intro{                                                 /*chgt alignement*/
     text-align: center;
@@ -34,4 +43,29 @@ h2{
 h2 ul li{
     list-style: none;
 }
+
+@-webkit-keyframes ombre {
+    0% {
+      box-shadow: 0 0 45px rgb(28, 255, 47);
+    }
+    100% {
+      box-shadow: 0 0 45pxx rgb(16, 117, 250);
+    }
+  }
+  @-moz-keyframes ombre {
+    0% {
+      box-shadow: 0 0 45px red;
+    }
+    100% {
+      box-shadow: 0 0 45px rgb(91, 3, 255);
+    }
+  }
+  @keyframes ombre {
+    0% {
+      box-shadow: 0 0 45px rgb(1, 102, 255);
+    }
+    100% {
+      box-shadow: 0 0 45px rgb(88, 194, 255);
+    }
+  }
 
