--- a/projets-web/Cours_OCR_CV_en_ligne/ocr_cv.css
+++ b/projets-web/Cours_OCR_CV_en_ligne/ocr_cv.css
@@ -1,3 +1,11 @@
+@media screen and (max-width: 1280px)
+{
+  #aside{
+    display: none;
+  }
+}
+
+
 body{
     margin:0;
     background-image: url(images/fondBlanc.jpg);
