commit 24/09/19 jumbotron & bootstrap

--- a/projets-web/Cours_OCR_CV_en_ligne/ocr_cv.css
+++ b/projets-web/Cours_OCR_CV_en_ligne/ocr_cv.css
@@ -1,6 +1,18 @@
-@media screen and (max-width: 1024px)
+@media all and (max-width: 1024px)
 {
+  #bloc-principal{
+    width: auto;
+  }
+
   #aside{
+    display: none;
+  }
+
+  #conteneur{
+    flex-direction: column;
+  }
+
+  .photoProf{
     display: none;
   }
 }
