--- a/projets-web/Cour_CRM_Bootstrap/index.css
+++ b/projets-web/Cour_CRM_Bootstrap/index.css
@@ -1,39 +1,81 @@
 @media (min-width: 768px) {
     .container {
-      width: 750px;
+        width: 750px;
     }
-  }
-  @media (min-width: 992px) {
+}
+
+@media (min-width: 992px) {
     .container {
-      width: 970px;
-      
+        width: 970px;
+
     }
-  }
-  @media (min-width: 1200px) {
+}
+
+@media (min-width: 1200px) {
     .container {
-      width: 1170px;
+        width: 1170px;
     }
-  }
+}
 
 .row {
     margin-right: -15px;
     margin-left: -15px;
-    }
+}
 
-    body {
-        padding-top: 10px;
-      }
-      [class*="col-"], footer {
-        background-color: lightgreen;
-        border: 2px solid black;
-        border-radius: 6px;
-        line-height: 40px;
-        text-align: center;
-      }
+body {
+    padding-top: 10px;
+}
 
-      .container {
-        padding-right: 15px;
-        padding-left: 15px;
-        margin-right: auto;
-        margin-left: auto;
-      }
+[class*="col-"],
+footer {
+    background-color: lightgreen;
+    border: 2px solid black;
+    border-radius: 6px;
+    line-height: 40px;
+    text-align: center;
+}
+
+.container {
+    max-width: 900px;
+    margin-left: auto;
+    margin-right: auto;
+    padding-right: 15px;
+    padding-left: 15px;
+}
+
+.container2 {
+    background: url('jumbotron.jpg') no-repeat center center;
+    /*background-size: cover;*/
+    width: 100%;
+    height: 300px;
+}
+
+.jumbotron {
+    text-align: center;
+    height: 300px;
+    color: white;
+    /*text-shadow: black 0.3em 0.3em 0.3em;*/
+    /*background: transparent url("jumbotron.jpg") no-repeat;*/
+    /*padding: 40px 15px;*/
+    /*margin-bottom: 30px;*/
+    
+}
+
+.jumbotron h3 {
+    background-color: rgba(255, 255, 255, 0.5);
+    color: rgb(21, 52, 156);
+    padding: 50px;
+    margin: 12px;
+    margin-right: 520px;
+    margin-left: 520px;
+    font-weight: bold;
+    font-size: 25px;
+}
+
+.jumbotron h1 {
+    font-weight: bold;
+    font-size: 30px;
+    padding-top: 30px;
+    -webkit-text-stroke: 1px;
+    -webkit-text-stroke-color: rgb(21, 52, 156);
+}
