--- a/projets-web/Cours_OCR_Zozor/zozor.css
+++ b/projets-web/Cours_OCR_Zozor/zozor.css
@@ -1,152 +1,132 @@
-
-@media all and (max-width: 1024px)
-{
-    #bloc_page
-    {
+@media all and (max-width: 1024px) {
+    #bloc_page {
         width: auto;
     }
 
-    nav
-    {
+    nav {
         width: auto;
         text-align: left;
     }
-    
-    nav ul
-    {
+
+    nav ul {
         flex-direction: column;
     }
 
-    nav li
-    {
+    nav li {
         padding-left: 4px;
     }
-    
-    nav a
-    {
+
+    nav a {
         font-size: 1.1em;
     }
-    
-    nav a:hover
-    {
+
+    nav a:hover {
         border-bottom: 0;
     }
 
-    #banniere_image
-    {
+    #banniere_image {
         display: none;
     }
 
-    section
-    {
+    section {
         flex-direction: column;
     }
 
-    article, aside
-    {
+    article,
+    aside {
         width: auto;
         margin-bottom: 15px;
     }
-    
-    #fleche_bulle
-    {
+
+    #fleche_bulle {
         display: none;
     }
-    
-    #photo_zozor img
-    {
+
+    #photo_zozor img {
         width: 110px;
         float: right;
         margin-left: 15px;
     }
-    
-    aside p:last-child
-    {
+
+    aside p:last-child {
         text-align: center;
     }
 }
 
 /* Définition des polices personnalisées */
 
-@font-face
-{
+@font-face {
     font-family: 'BallparkWeiner';
     src: url('polices/ballpark.eot');
     src: url('polices/ballpark.eot?#iefix') format('embedded-opentype'),
-         url('polices/ballpark.woff') format('woff'),
-         url('polices/ballpark.ttf') format('truetype'),
-         url('polices/ballpark.svg#BallparkWeiner') format('svg');
+        url('polices/ballpark.woff') format('woff'),
+        url('polices/ballpark.ttf') format('truetype'),
+        url('polices/ballpark.svg#BallparkWeiner') format('svg');
     font-weight: normal;
     font-style: normal;
 }
 
-@font-face
-{
+@font-face {
     font-family: 'Dayrom';
     src: url('polices/dayrom.eot');
     src: url('polices/dayrom.eot?#iefix') format('embedded-opentype'),
-         url('polices/dayrom.woff') format('woff'),
-         url('polices/dayrom.ttf') format('truetype'),
-         url('polices/dayrom.svg#Dayrom') format('svg');
+        url('polices/dayrom.woff') format('woff'),
+        url('polices/dayrom.ttf') format('truetype'),
+        url('polices/dayrom.svg#Dayrom') format('svg');
     font-weight: normal;
     font-style: normal;
 }
 
 /* Eléments principaux de la page */
 
-body
-{
+body {
     background: url('images/fond_jaune.png');
     font-family: 'Trebuchet MS', Arial, sans-serif;
     color: #181818;
 }
 
-#bloc_page
-{
+#bloc_page {
     width: 60%;
     margin: auto;
 }
 
-section h1, footer h1, nav a
-{
+section h1,
+footer h1,
+nav a {
     font-family: Dayrom, serif;
     font-weight: normal;
-    text-transform: uppercase; /*texte tjs ecrit en maj*/
+    text-transform: uppercase;
+    /*texte tjs ecrit en maj*/
 }
 
 /*Header*/
 
-header
-{
+header {
     background: url('images/separateur.png') repeat-x bottom;
     display: flex;
     justify-content: space-between;
     align-items: flex-end;
 }
 
-#titre_principal
-{
+#titre_principal {
     display: flex;
     flex-direction: column;
 }
 
-#logo
-{
+#logo {
     display: flex;
     flex-direction: row;
     align-items: baseline;
 }
 
-header h1
-{
+header h1 {
     font-family: 'BallparkWeiner', serif;
     font-size: 2.5em;
     font-weight: normal;
     margin: 0 0 0 10px;
 }
 
-header h2
-{
+header h2 {
     font-family: Dayrom, serif;
     font-size: 1.1em;
     margin-top: 0px;
@@ -155,27 +135,23 @@ header h2
 
 /* Navigation */
 
-nav ul
-{
+nav ul {
     list-style-type: none;
     display: flex;
 }
 
-nav li
-{
+nav li {
     margin-right: 15px;
 }
 
-nav a
-{
+nav a {
     font-size: 1.3em;
     color: #181818;
     padding-bottom: 3px;
     text-decoration: none;
 }
 
-nav a:hover
-{
+nav a:hover {
     color: #760001;
     border-bottom: 3px solid #760001;
 }
@@ -183,8 +159,7 @@ nav a:hover
 
 /* Bannière */
 
-#banniere_image
-{
+#banniere_image {
     margin-top: 15px;
     height: 200px;
     border-radius: 5px;
@@ -194,8 +169,7 @@ nav a:hover
     margin-bottom: 25px;
 }
 
-#banniere_description
-{
+#banniere_description {
     position: absolute;
     bottom: 0;
     border-radius: 0px 0px 5px 5px;
@@ -203,14 +177,13 @@ nav a:hover
     height: 33px;
     padding-top: 15px;
     padding-left: 4px;
-    background-color: rgba(24,24,24,0.8);
+    background-color: rgba(24, 24, 24, 0.8);
     color: white;
     font-size: 0.8em;
-    
+
 }
 
-.bouton_rouge
-{
+.bouton_rouge {
     height: 25px;
     position: absolute;
     right: 5px;
@@ -225,44 +198,38 @@ nav a:hover
     text-decoration: none;
 }
 
-.bouton_rouge img
-{
+.bouton_rouge img {
     border: 0;
 }
 
 
 /* Corps */
 
-section
-{
+section {
     display: flex;
     margin-bottom: 20px;
 }
 
-article, aside
-{
+article,
+aside {
     text-align: justify;
 }
 
-article
-{
+article {
     margin-right: 20px;
     flex: 3;
 }
 
-.ico_categorie
-{
+.ico_categorie {
     vertical-align: middle;
     margin-right: 8px;
 }
 
-article p
-{
+article p {
     font-size: 0.8em;
 }
 
-aside
-{
+aside {
     flex: 1.2;
     position: relative;
     background-color: #706b64;
@@ -273,85 +240,72 @@ aside
     font-size: 0.9em;
 }
 
-#fleche_bulle
-{
+#fleche_bulle {
     position: absolute;
     top: 100px;
     left: -12px;
 }
 
-#photo_zozor
-{
+#photo_zozor {
     text-align: center;
 }
 
-#photo_zozor img
-{
+#photo_zozor img {
     border: 1px solid #181818;
 }
 
-aside img
-{
+aside img {
     margin-right: 5px;
 }
 
 
 /* Footer */
 
-footer
-{
+footer {
     display: flex;
-    background:  url('images/ico_top.png') no-repeat top center, url('images/separateur.png') repeat-x top, url('images/ombre.png') repeat-x top;
+    background: url('images/ico_top.png') no-repeat top center, url('images/separateur.png') repeat-x top, url('images/ombre.png') repeat-x top;
     padding-top: 25px;
 }
 
-footer p, footer ul
-{
+footer p,
+footer ul {
     font-size: 0.8em;
 }
 
-footer h1
-{
+footer h1 {
     font-size: 1.1em;
 }
 
 
-#tweet
-{
+#tweet {
     width: 28%;
 }
 
-#mes_photos
-{
+#mes_photos {
     width: 35%;
 }
 
-#mes_amis
-{
+#mes_amis {
     width: 31%;
 }
 
-#mes_photos img
-{
+#mes_photos img {
     border: 1px solid #181818;
     margin-right: 2px;
 }
 
-#listes_amis
-{
+#listes_amis {
     display: flex;
     justify-content: space-between;
     margin-top: 0;
 }
 
-#mes_amis ul
-{
+#mes_amis ul {
     list-style-image: url('images/ico_liensexterne.png');
     padding-left: 2px;
 }
 
-#mes_amis a
-{
+#mes_amis a {
     text-decoration: none;
     color: #760001;
 }
