--- a/projets-web/Demo_Solar_system_animation/style.css
+++ b/projets-web/Demo_Solar_system_animation/style.css
@@ -33,11 +33,11 @@ body{
 .sun .star{
     width: 250px;
     height: 250px;
-    background: url('sun01.png');
+    background: url('sun01.png') no-repeat;
     background-size: cover;
     border-radius: 250px;
     margin: 0 auto;
-    animation: spinsun 40s linear infinite;
+    animation: spinsun 40s infinite linear;
 }
 
 .planet{
@@ -102,10 +102,11 @@ body{
     width: 610px;
     z-index: 4;
     animation: orbitearth 20s infinite linear;
+    top: -20px;
 }
 
 .earth .planet{
-    width:40px;
+    width: 40px;
     height: 40px;
     background-image: url('earth.png');
     animation: anti-spin 20s infinite linear;
@@ -115,17 +116,34 @@ body{
     animation: shadow 20s infinite linear;
 }
 
+.moon{
+    position: absolute;
+    width: 630px;
+    z-index: 5;
+    animation: orbitmoon 20s infinite linear;
+    top: -5px;
+}
+.moon .planet{
+    width: 10px;
+    height: 10px;
+    background-image: url('moon.png');
+    animation: anti-spin 20s infinite linear;
+}
+.moon .shadow{
+    animation: shadowMoon 20s infinite linear;
+}
+
 .mars{
     position: absolute;
     width: 706px;
     z-index: 5;
-    animation: orbitemars 30s infinite linear;
+    animation: orbitmars 30s infinite linear;
     top: -11px;
 }
 
 .mars .planet{
-    width:40px;
-    height: 40px;
+    width: 22px;
+    height: 22px;
     background-image: url('mars.png');
     animation: anti-spin 30s infinite linear;
 }
@@ -138,7 +156,7 @@ body{
     position: absolute;
     width: 1100px;
     z-index: 6;
-    animation: orbitejupiter 50s infinite linear;
+    animation: orbitjupiter 50s infinite linear;
     top: -64px;
 }
 
@@ -153,13 +171,71 @@ body{
     animation: shadow 50s infinite linear;
 }
 
-
-
-
-
-
-
-
 @keyframes spinsun{
-    0%{}
+    0%{transform: rotate(0);}
+    100%{transform: rotate(-360deg);}
+}
+@keyframes shadow{
+    0%{background-position: 130% 0%;}
+    33%{background-position: 50% 0%;}
+    55%{background-position: 0% 0%;}
+    80%{background-position: -50% 0%;}
+    100%{background-position: -50% 0%;}
+}
+@keyframes shadowMoon{
+    0%{background-position: 130% 0%;}
+    33%{background-position: 50% 0%;}
+    55%{background-position: 0% 0%;}
+    80%{background-position: -50% 0%;}
+    100%{background-position: -50% 0%;}
+}
+@keyframes orbitmercury{
+    0%{z-index: 2; transform: rotateY(0);}
+    49%{z-index: 2;}
+    50%{z-index: -2;}
+    99%{z-index: -2;}
+    100%{z-index: 2; transform: rotateY(360deg);}
+}
+@keyframes orbitvenus{
+    0%{z-index: 3;transform: rotateY(0);}
+    49%{z-index: 3;}
+    50%{z-index: -3;}
+    99%{z-index: -3;}
+    100%{z-index: 3;transform: rotateY(360deg);}
+}
+@keyframes orbitearth{
+    0%{z-index: 4;transform: rotateY(0);}
+    49%{z-index: 4;}
+    50%{z-index: -4;}
+    99%{z-index: -4;}
+    100%{z-index: 4;transform: rotateY(360deg);}
+}
+@keyframes orbitmoon{
+    0%{z-index: 5;transform: rotateY(0);}
+    49%{z-index: 5;}
+    50%{z-index: -5;}
+    99%{z-index: -5;}
+    100%{z-index: 5;transform: rotateY(360deg);}
+}
+@keyframes orbitmars{
+    0%{z-index: 5;transform: rotateY(0);}
+    49%{z-index: 5;}
+    50%{z-index: -5;}
+    99%{z-index: -5;}
+    100%{z-index: 5;transform: rotateY(360deg);}
+}
+@keyframes orbitjupiter{
+    0%{z-index: 6;transform: rotateY(0);}
+    49%{z-index: 6;}
+    50%{z-index: -6;}
+    99%{z-index: -6;}
+    100%{z-index: 6;transform: rotateY(360deg);}
+}
+@keyframes anti-spin{
+    form {transform: rotateY(0);}
+    to {transform: rotateY(-360deg)}
+}
+@keyframes anti-spin-rings{
+    form {transform: rotateY(0) rotateX(73deg);}
+    to {transform: rotateY(-360deg) rotateX(73deg);}
 }
