--- a/projets-web/Demo_Landing_Page_Design/style.css
+++ b/projets-web/Demo_Landing_Page_Design/style.css
@@ -1,8 +1,11 @@
-@import url("https://fonts.googleapis.com/css?family=PT+Sans+Narrow&display=swap");
+@import url("https://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700&display=swap");
 
 body{
     margin: 0;
     padding: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     min-height: 100vh;
     font-family: 'PT Sans Narrow', sans-serif;
 }
@@ -52,7 +55,7 @@ section{
     align-items: center;
 }
 
-.bannerText{
+section .bannerText{   
     position: absolute;
     top: 50%;
     left: 10%;
@@ -60,29 +63,31 @@ section{
     max-width: 700px;
 }
 
-.bannerText h2,
-.bannerText h3{
+section h2,
+section h3{
     position: relative;
     margin: 0;
     padding: 0;
     display: inline-block;
     transform-origin: left;
     text-transform: uppercase;
-    transform: scaleX(1);
+    transform: scaleX(0);
     animation: revealTextReverse 1s ease-in-out forwards;
 }
 
-.bannerText h2{
+section h2{          /*barre latérales noires*/
     font-size: 6em;
     animation-delay: 2s;
 }
 
-.bannerText h3{
+section h3{           /*barre latérales noires*/
     font-size: 3em;
+    animation-delay: 3s;
+
 }
 
-.bannerText h2:before,
-.bannerText h3:before{
+section h2:before,
+section h3:before{
     content: '';
     position: absolute;
     top: 0;
@@ -93,9 +98,10 @@ section{
     transform-origin: right;
     animation: revealText 1s ease-in-out forwards;
     animation-delay: 3s;
+    z-index: 1;
 }
 
-.bannerText h3:before{
+section h3:before{
     animation-delay: 4s;
 }
 
@@ -109,3 +115,133 @@ section{
     to{transform: scaleX(1);}
 }
 
+section p{
+    opacity: 0;
+    font-weight: 300;
+    font-size: 1.2em;
+    animation: fadeIn 1s linear forwards;
+    animation-delay: 5s;
+}
+
+
+
+a.read-more{
+    opacity: 0;
+    display: inline-block;
+    margin: 20px 0 0;
+    padding: 10px 20px;
+    background: #000;
+    color: #fff;
+    font-weight: 700;
+    text-decoration: none;
+    font-size: 1.2em;
+    letter-spacing: 1px;
+    animation: fadeInBottom .5s linear forwards;
+    animation-delay: 5.5s;
+}
+
+@keyframes fadeIn{
+    0% { opacity: 0;}
+    100% { opacity: 1;}
+}
+
+@keyframes fadeInBottom{
+    from { transform: translateY(50px); opacity: 0;}
+    to { transform: translateY(0); opacity: 1;}
+} 
+
+.bulb{
+    opacity: 0;
+    position: absolute;
+    right: 10%;
+    top: 50%;
+    transform: translateY(-50%);
+    animation: fadeIn 1s linear forwards;
+    animation-delay: 6s;
+}
+
+.header{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 80px;
+    padding: 0 10%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    box-sizing: border-box;
+    z-index: 100;
+}
+
+.header .logo{
+    margin: 0;
+    padding: 0;
+    font-size: 2em;
+    text-transform: uppercase;
+    animation-delay: 2s;
+}
+
+.header ul{
+    margin: 0;
+    padding: 0;
+    display: flex;   
+}
+
+.header ul li{
+    opacity: 0;
+    list-style: none;
+    margin: 0 10px;
+    animation: fadeInRight .5s linear forwards;
+}
+
+.header ul li:nth-child(1){
+    animation-delay: 5s;  
+}
+
+.header ul li:nth-child(2){
+    animation-delay: 5.25s;  
+}
+
+.header ul li:nth-child(3){
+    animation-delay: 5.5s;  
+}
+
+.header ul li:nth-child(4){
+    animation-delay: 5.75s;  
+}
+
+.header ul li:nth-child(5){
+    animation-delay: 6s;  
+}
+
+.header ul li:nth-child(6){
+    animation-delay: 6.25s;  
+}
+
+
+
+.header ul li:last-child{
+    margin-right: 0;
+}
+
+.header ul li a{
+    text-decoration: none;
+    font-size: 1.2em;
+    color: #000;
+    padding: 5px 10px;
+    margin: 0;
+    background: #fff;
+    letter-spacing: 2px;
+}
+
+.header ul li a.active, 
+.header ul li a:hover{
+    background: #000;
+    color: #fff;
+}
+
+@keyframes fadeInRight{
+    0%{transform: translateX(150px); opacity: 0;}
+    100%{transform: translateX(0); opacity: 1;}
+}
