commit 04/11/2019 suite et fin exo responsive landing page

--- a/projets-web/Demo_Landing_Page_Design/style.css
+++ b/projets-web/Demo_Landing_Page_Design/style.css
@@ -10,6 +10,20 @@ body{
     font-family: 'PT Sans Narrow', sans-serif;
 }
 
+/*div{
+    display: block;
+}
+
+ul{
+    display: block;
+    list-style-type: disc;
+    margin-block-start: 1em;
+    margin-block-end: 1em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    padding-inline-start: 40px;
+}*/
+
 .open{
     position: fixed;
     top: 0;
@@ -30,11 +44,11 @@ body{
     animation: open 1s ease-in-out forwards;
 }
 
-.open .layer:nth-child(1){
+.open .layer:nth-child(1){ /*1ere page intro*/
     background: #000;
     z-index: 2;
 }
-.open .layer:nth-child(2){
+.open .layer:nth-child(2){ /*2nd page intro*/
     background: #03a9f4;
     animation-delay: 1s;
     z-index: 1;
@@ -53,6 +67,7 @@ section{
     display: grid;
     justify-content: center;
     align-items: center;
+    overflow: hidden;
 }
 
 section .bannerText{   
@@ -63,8 +78,8 @@ section .bannerText{
     max-width: 700px;
 }
 
-section h2,
-section h3{
+.bannerText h2, 
+.bannerText h3{
     position: relative;
     margin: 0;
     padding: 0;
@@ -75,19 +90,18 @@ section h3{
     animation: revealTextReverse 1s ease-in-out forwards;
 }
 
-section h2{          /*barre latérales noires*/
+.bannerText h2{
     font-size: 6em;
     animation-delay: 2s;
 }
 
-section h3{           /*barre latérales noires*/
+.bannerText h3{       /*barre latérales noires*/
     font-size: 3em;
     animation-delay: 3s;
-
 }
 
-section h2:before,
-section h3:before{
+.bannerText h2:before,
+.bannerText h3:before{
     content: '';
     position: absolute;
     top: 0;
@@ -100,32 +114,35 @@ section h3:before{
     animation-delay: 3s;
     z-index: 1;
 }
-
-section h3:before{
+  
+.bannerText h3:before{
     animation-delay: 4s;
 }
 
 @keyframes revealText {
-    from{transform: scaleX(1);}
-    to{transform: scaleX(0);}
+    0%{transform: scaleX(1);}
+    100%{transform: scaleX(0);}
 }
 
 @keyframes revealTextReverse {
-    from{transform: scaleX(0);}
-    to{transform: scaleX(1);}
+    0%{transform: scaleX(0);}
+    100%{transform: scaleX(1);}
 }
 
-section p{
+@keyframes fadeIn{
+    0% { opacity: 0;}
+    100% { opacity: 1;}
+}
+
+.bannerText p{
     opacity: 0;
-    font-weight: 300;
+    font-weight: 400;
     font-size: 1.2em;
     animation: fadeIn 1s linear forwards;
     animation-delay: 5s;
 }
 
-
-
-a.read-more{
+.bannerText a{     /*bouton read more*/
     opacity: 0;
     display: inline-block;
     margin: 20px 0 0;
@@ -138,16 +155,11 @@ a.read-more{
     letter-spacing: 1px;
     animation: fadeInBottom .5s linear forwards;
     animation-delay: 5.5s;
-}
-
-@keyframes fadeIn{
-    0% { opacity: 0;}
-    100% { opacity: 1;}
-}
+} 
 
 @keyframes fadeInBottom{
-    from { transform: translateY(50px); opacity: 0;}
-    to { transform: translateY(0); opacity: 1;}
+    0% { transform: translateY(50px); opacity: 0;}
+    100% { transform: translateY(0); opacity: 1;}
 } 
 
 .bulb{
@@ -158,6 +170,7 @@ a.read-more{
     transform: translateY(-50%);
     animation: fadeIn 1s linear forwards;
     animation-delay: 6s;
+    z-index: 100;
 }
 
 .header{
@@ -166,20 +179,22 @@ a.read-more{
     left: 0;
     width: 100%;
     height: 80px;
-    padding: 0 10%;
+    padding: 0 100px;
     display: flex;
     align-items: center;
     justify-content: space-between;
     box-sizing: border-box;
-    z-index: 100;
+    z-index: 10000;
 }
 
 .header .logo{
+    opacity: 0;
     margin: 0;
     padding: 0;
     font-size: 2em;
     text-transform: uppercase;
-    animation-delay: 2s;
+    animation: fadeIn .5s linear forwards;
+    animation-delay: 5s;
 }
 
 .header ul{
@@ -192,33 +207,44 @@ a.read-more{
     opacity: 0;
     list-style: none;
     margin: 0 10px;
-    animation: fadeInRight .5s linear forwards;
+    animation: fadeInRight .5s linear forwards;  /*animation du menu en haut*/
 }
 
-.header ul li:nth-child(1){
+.header ul li:nth-child(1),  /*enchainement de l'anim du menu, 1 apres l'autre*/
+.sci li:nth-child(1)         /*enchainement anim du menu reseau sociaux*/
+{
     animation-delay: 5s;  
 }
 
-.header ul li:nth-child(2){
+.header ul li:nth-child(2),
+.sci li:nth-child(2)
+{
     animation-delay: 5.25s;  
 }
 
-.header ul li:nth-child(3){
+.header ul li:nth-child(3),
+.sci li:nth-child(3)
+{
     animation-delay: 5.5s;  
 }
 
-.header ul li:nth-child(4){
+.header ul li:nth-child(4),
+.sci li:nth-child(4)
+{
     animation-delay: 5.75s;  
 }
 
-.header ul li:nth-child(5){
+.header ul li:nth-child(5),
+.sci li:nth-child(5)
+{
     animation-delay: 6s;  
 }
 
-.header ul li:nth-child(6){
+.header ul li:nth-child(6),
+.sci li:nth-child(6)
+{
     animation-delay: 6.25s;  
 }
-
 
 
 .header ul li:last-child{
@@ -235,7 +261,7 @@ a.read-more{
     letter-spacing: 2px;
 }
 
-.header ul li a.active, 
+.header ul li a.active,  /*active et hover du menu du haut*/
 .header ul li a:hover{
     background: #000;
     color: #fff;
@@ -244,4 +270,151 @@ a.read-more{
 @keyframes fadeInRight{
     0%{transform: translateX(150px); opacity: 0;}
     100%{transform: translateX(0); opacity: 1;}
+}
+
+
+.sci{
+    position: absolute;
+    bottom: 15px;
+    right: 30px;
+    display: flex;
+    flex-direction: column;
+}
+
+.sci li{
+    opacity: 0;
+    list-style: none;
+    padding: 10px 0;
+    text-align: center;
+    animation: fadeInBottom .5s linear forwards;
+    animation-delay: 5s;
+}
+
+.sci li a{
+    font-size: 1.2em;
+    color: #000;
+}
+
+.element1{
+    opacity: 0;
+    position: absolute;
+    bottom: -100px;
+    right: 40%;
+    width: 250px;
+    height: 250px;
+    border: 40px solid #000;
+    border-radius: 25%;
+    animation: rotate 40s linear infinite, 
+               fadeIn 1s linear forwards;
+    animation-delay: 7s;
+}
+
+.element2{
+    opacity: 0;
+    position: absolute;
+    left: -10px;
+    top: 40%;
+    width: 50px;
+    height: 50px;
+    border: 2px solid #000;
+    animation: rotate 30s linear infinite, 
+               fadeIn 1s linear forwards;
+    animation-delay: 7s;
+}
+
+@keyframes rotate{
+    0%{transform: rotate(45deg);}
+    100%{transform: rotate(405deg);}
+}
+
+.fa-times.x2,
+.fa-bars.x2
+{
+    font-size: 28px;
+    cursor: pointer;
+    display: none;
+}
+
+@media (max-width: 1280px){
+    section{
+        /*height: auto !important;*/
+        display: initial;  /*valeur par défaut de la propriété*/
+        padding: 100px;
+        box-sizing: border-box;
+    }
+    .bannerText{
+        position: relative;
+        top: 0;
+        left: 0;
+        margin-top: 100px;
+        transform: translateY(0);
+        max-width: 700px;
+        z-index: 1001;
+    }
+    .sci{
+        z-index: 1002;
+        right: 20px;
+    }
+}
+
+@media (max-width: 991px){
+    .fa-bars.x2{
+        display: block;
+    }
+    .fa-times.x2{
+        position: absolute;
+        top: 20px;
+        right: 40px;
+        display: block;
+    }
+    .bannerText h2{
+        font-size: 3em;
+    }
+    .bannerText h3{
+        font-size: 1.5em;
+    }
+    .element1{
+        display: none;
+    }
+    .header ul{
+        position: fixed;
+        background: #fff;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        display: none;
+        z-index: 1010;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        overflow-y: scroll;
+    }
+
+    .header ul.show{
+        display: flex;
+    }
+
+    .header ul li{
+        margin: 10px 0;
+    }
+
+    .header ul li:nth-child(1),
+    .header ul li:nth-child(2),
+    .header ul li:nth-child(3),
+    .header ul li:nth-child(4),
+    .header ul li:nth-child(5),
+    .header ul li:nth-child(6)
+    {
+        animation-delay: 0s !important;
+    }
+}
+
+@media(max-width: 991px){
+    section{
+        padding: 50px 80px 50px 50px;
+    }
+    .header{
+        padding: 0 50px;
+    }
 }
