--- a/projets-web/Demo_Transparent_Login_Form/style.css
+++ b/projets-web/Demo_Transparent_Login_Form/style.css
@@ -5,7 +5,7 @@
 }
 
 body{
-    background: url('Images/pattern2.png') no-repeat center;
+    background: url('Images/pattern8.png') no-repeat center;
     background-size: cover;
     font-family: sans-serif;
 }
@@ -23,10 +23,10 @@ body{
     width: 100%;
     max-width: 380px;
     padding: 80px 40px 40px;
-    background: rgba(0,0,0,.3);
+    background: rgba(0,0,0,.6);
     border-radius: 10px;
     color: #fff;
-    box-shadow: 0 15px 25px rgba(0,0,0,.7);
+    box-shadow: 0 15px 25px rgba(0,0,0,.5);
 }
 
 .form::before{
@@ -37,21 +37,23 @@ body{
     width: 50%;
     height: 100%;
     background: rgba(255,255,255,0.08);
+    transform: skewX(-26deg);
+    transform-origin: bottom left;
     border-radius: 10px;
     pointer-events: none;
 }
 
 .form img{
     position: absolute;
-    top: -50%;
+    top: -13%;
     left: calc(50% - 50px);
     width: 100px;
-    background: rgba(255,255,255,.8);
+    background: rgba(255,255,255,.5);
     border-radius: 50%;
 }
 
 .form h2{
-    text-align: center;
+    text-align: center;  /*"login" dans le cadre*/
     letter-spacing: 1px;
     margin-bottom: 2rem;
     color: orange;
@@ -97,11 +99,49 @@ body{
     border: none;
     outline: none;
     background: #ff652f;
+    font-size: 1rem;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    padding: 10px 20px;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.forgot-pw{
+    color: inherit;
 }
 
 #forgot-pw{
-    display: none;
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    top: 0;
+    left: 0;
+    right: 0;
+    height: 0;
+    z-index: 1;
+    background: #fff;
+    opacity: 0;
+    transition: .6s;
 }
+
+#forgot-pw:target{
+    height: 100%;
+    opacity: 1;
+}
+
+.close{
+    position: absolute;
+    right: 1.5rem;
+    top: 0.5rem;
+    font-size: 2rem;
+    font-weight: 900;
+    text-decoration: none;
+    color: inherit;
+}
+
+
 
 
 
