--- a/projets-web/Demo_Leaves_Animation/style.css
+++ b/projets-web/Demo_Leaves_Animation/style.css
@@ -1,5 +1,105 @@
 body{
     margin: 0;
     padding: 0;
+    overflow: hidden;
 }
 
+section{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: radial-gradient(#333, #000);
+}
+
+.set{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+}
+
+.set div{
+    position: absolute;
+    display: block;
+}
+
+.set div:nth-child(1){
+    left: 20%;
+    animation: animate 15s linear infinite;
+    animation-delay: -7s;
+}
+.set div:nth-child(2){
+    left: 50%;
+    animation: animate 20s linear infinite;
+    animation-delay: -5s;
+}
+.set div:nth-child(3){
+    left: 70%;
+    animation: animate 25s linear infinite;
+    
+}
+.set div:nth-child(4){
+    left: 3%;
+    animation: animate 15s linear infinite;
+    animation-delay: -5s;
+}
+.set div:nth-child(5){
+    left: 85%;
+    animation: animate 18s linear infinite;
+    animation-delay: -10s;
+}
+.set div:nth-child(6){
+    left: 0%;
+    animation: animate 12s linear infinite;
+}
+.set div:nth-child(7){
+    left: 15%;
+    animation: animate 14s linear infinite;
+    animation-delay: -5s;
+}
+.set div:nth-child(8){
+    left: 60%;
+    animation: animate 8s linear infinite;
+    animation-delay: -5s;
+}
+.set div:nth-child(9){
+    left: 30%;
+    animation: animate 15s linear infinite;
+    animation-delay: -3s;
+}
+.set div:nth-child(10){
+    left: 95%;
+    animation: animate 17s linear infinite;
+}
+.set div:nth-child(11){
+    left: 45%;
+    animation: animate 27s linear infinite;
+}
+.set div:nth-child(12){
+    left: 38%;
+    animation: animate 11s linear infinite;
+}
+.set div:nth-child(13){
+    left: 18%;
+    animation: animate 8s linear infinite;
+    animation-delay: -4s;
+}
+.set div:nth-child(14){
+    left: 55%;
+    animation: animate 24s linear infinite;
+}
+
+@keyframes animate {
+    0%{ opacity: 0; top: -10%; transform: translateX(20px) rotate(0deg); }
+    10%{ opacity: 1;}
+    20%{ transform: translateX(-20px) rotate(45deg);}
+    40%{ transform: translateX(-20px) rotate(90deg);}
+    60%{ transform: translateX(20px) rotate(135deg);}
+    80%{ transform: translateX(-20px) rotate(180deg);}
+    100%{ top: 110%; transform: translateX(-20px) rotate(225deg);}
+}
+
+.set2{
+    transform: scale(2);
+}
